# olba

./: .gitignore  Cargo.toml
demoe/: Cargo.toml
demoe/src/: log_config.rs  main.rs  route.rs
ol-ai/: Cargo.toml
ol-ai/src/: main.rs
olbe-ai/: Cargo.toml
olbe-ai/src/: lib.rs  main.rs
olbe-ai/src/ai/: milvus.rs  mod.rs  nms.rs
olbe-ai/src/controller/: ai_controller.rs  mod.rs  web_demo_service.rs
olbe-ai/src/domain/entity/: mod.rs  user_face.rs
olbe-ai/src/error/: mod.rs
olbe-ai/src/grpc/server/: grpc_face_server.rs  mod.rs
olbe-ai/src/router/: mod.rs
olbe-ai/src/service/: ai_service.rs  mod.rs  service.rs  service_impl.rs
olbe-ai/src/service/ai_service/: impl.rs
olbe-grpc/: Cargo.toml  build.rs
olbe-grpc/proto/olbe/grpc/ai/: face.proto
olbe-grpc/src/: lib.rs
ort-demo/: Cargo.toml
ort-demo/src/: build.rs  face_det.rs  main.back.rs  main.rs  main2.rs  nms.rs  rustface2.rs  yolov8.rs
ort-demo/src/data/: noteYoloV8.rs  temp.rs  tempOkYolo8.rs
yolov8/: Cargo.toml
yolov8/src/: main.rs
