[package]
name = "demoe"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
fast_log = { workspace = true, features = ["zip"] }

tokio = { workspace = true, features = ["full"] }

axum = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }

rbs = { workspace = true }
rbatis = { workspace = true, features = ["debug_mode"] }
rbdc-mysql = { workspace = true }