[package]
name = "olbe-grpc"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
prost = "0.13.1"
prost-types = "0.13.1"
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
walkdir = { workspace = true }