[package]
name = "ort-demo"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true
resolver="2"

[dependencies]
ort = {workspace = true,features = ["cuda","winapi"]}
#
ndarray = "0.15"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
image = "0.24"
show-image = { version = "0.14.0", features = [ "image", "raqote" ] }
raqote = { version = "0.8", default-features = false }
ureq = "2.1"
tracing = "0.1"

csv = "1.1.6"
reqwest = "0.12.5"
opencv = { version = "0"}